[package]
name = "cargo-arch"
version = "0.1.3"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
description = "Rust Arch Linux package packer"
repository = "https://github.com/wdv4758h/cargo-arch/"
edition = "2018"
keywords = ["cargo", "package"]

[dependencies]
anyhow = "1.0"
clap = { version = "2.33.0", features = ["yaml"] }
serde = "1.0.100"
serde_derive = "1.0.100"
toml = "0.5.3"

[package.metadata.arch]
arch = ["x86_64"]

[profile.release]
lto = true
