[package]
name = "cargo-arch"
version = "0.1.4"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
description = "Rust Arch Linux package packer"
repository = "https://github.com/wdv4758h/cargo-arch/"
edition = "2021"
keywords = ["cargo", "package"]

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.17", features = ["derive"] }
serde = { version = "1.0.137", features = ["std", "derive"] }
toml = "0.5.9"

[package.metadata.arch]
arch = ["x86_64"]

[profile.release]
lto = true
